--- a/kdeditor/index.html
+++ b/kdeditor/index.html
@@ -6,9 +6,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<style>*{box-sizing:border-box;outline:none}body{margin:0;font-family:Sans-serif;overflow:hidden}
-</style><link rel="stylesheet" href="styles-ISK45QZY.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-ISK45QZY.css"></noscript></head>
+<style>*{box-sizing:border-box;outline:none}body{margin:0;font-family:Sans-serif;overflow:hidden}</style><link rel="stylesheet" href="styles.1fd539d69e074462.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.1fd539d69e074462.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-4OHWVHQ7.js" type="module"></script></body>
+<script src="runtime.f015ba08c0cb1ee9.js" type="module"></script><script src="polyfills.e54ce4d2af430a3f.js" type="module"></script><script src="main.f62686f4b0d5de92.js" type="module"></script></body>
 </html>
