--- a/kdeditor/index.html
+++ b/kdeditor/index.html
@@ -6,8 +6,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<style>*{box-sizing:border-box;outline:none}body{margin:0;font-family:Sans-serif;overflow:hidden}</style><link rel="stylesheet" href="styles.1fd539d69e074462.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.1fd539d69e074462.css"></noscript></head>
+<style>:root{--primary:#8e44ad;--primary-dark:#7d3c98;--primary-light:#9b59b6;--secondary:#ff6b8b;--accent:#5d3fd3;--text-dark:#2c3e50;--text-light:#7f8c8d;--bg-light:#f8f9fa;--bg-white:#ffffff;--success:#27ae60;--warning:#f39c12;--error:#e74c3c;--border-radius:12px;--shadow:0 4px 20px rgba(0, 0, 0, .08);--transition:all .3s ease}*{box-sizing:border-box;margin:0;padding:0;font-family:Segoe UI,Tahoma,Geneva,Verdana,sans-serif}body{background-color:var(--bg-light);color:var(--text-dark);line-height:1.6}</style><link rel="stylesheet" href="styles.3388a818e1d3f3a6.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.3388a818e1d3f3a6.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="runtime.f015ba08c0cb1ee9.js" type="module"></script><script src="polyfills.e54ce4d2af430a3f.js" type="module"></script><script src="main.f62686f4b0d5de92.js" type="module"></script></body>
+<script src="runtime.978eeed8e7f79183.js" type="module"></script><script src="polyfills.699a3b55cb5ba041.js" type="module"></script><script src="main.2eb84d5da8ebf47d.js" type="module"></script></body>
 </html>
